Added fonts, set variables and styled footer

--- a/themes/quotesondev-theme/sass/_content.scss
+++ b/themes/quotesondev-theme/sass/_content.scss
@@ -2,6 +2,18 @@
 # Content
 --------------------------------------------------------------*/
 
+body {
+    font-weight: lighter;
+}
+
+a {
+	text-decoration: none;
+}
+
+.site {
+    padding: 2.5%;
+}
+
 /* Posts and pages */
 
 .sticky {
