--- a/themes/quotesondev-theme/sass/_mixins.scss
+++ b/themes/quotesondev-theme/sass/_mixins.scss
@@ -4,3 +4,19 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+// Media Queries
+
+
+@mixin tablet {
+	@media (min-width: $tablet__width) {
+	  @content;
+	}
+  }
+
+  
+@mixin desktop {
+	@media (min-width: $desktop__width) {
+	  @content;
+	}
+  }
