--- a/themes/quotesondev-theme/sass/_page-templates.scss
+++ b/themes/quotesondev-theme/sass/_page-templates.scss
@@ -2,6 +2,29 @@
 # Page Templates
 --------------------------------------------------------------*/
 
+
+
+
+/* Footer */
+.site-footer .menu {
+    display: flex;
+    margin-bottom: 4%;
+    li {
+        border-right: 1px solid #ffffff;
+        line-height: 1;
+        padding: 0 1rem;
+    }
+    li:first-child {
+        padding-left: 0;
+    }
+    li:last-child {
+        border: none;
+    }
+}
+
+
+
+
 /* All Archives Page */
 
 /* Submit a Quote Page */
