Added logo image in header

--- a/themes/quotesondev-theme/sass/_variables.scss
+++ b/themes/quotesondev-theme/sass/_variables.scss
@@ -17,7 +17,7 @@ $color__border-abbr: #666;
 
 $color__link: #00cc00;
 $color__link-visited: #00cc00;
-$color__link-hover: midnightblue;
+$color__link-hover: darken(#00cc00, 10%);
 
 // Typography
 
