Added font awesome quotes to site

--- a/themes/quotesondev-theme/sass/_page-templates.scss
+++ b/themes/quotesondev-theme/sass/_page-templates.scss
@@ -1,6 +1,23 @@
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
+/* About */
+@include desktop {
+    .site-main::before {
+        display: inline-block;
+        content: "\f10d";
+        font-weight: 900;
+        font-family: "Font Awesome 5 Free";
+        font-size: 100px;
+    } 
+    .site-main::after {
+        display: inline-block;
+        content: "\f10e";
+        font-weight: 900;
+        font-family: "Font Awesome 5 Free";
+        font-size: 100px;
+    }   
+}
 
 
 
