--- a/themes/quotesondev-theme/sass/_variables.scss
+++ b/themes/quotesondev-theme/sass/_variables.scss
@@ -15,9 +15,11 @@ $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
 
-$color__link: #00cc00;
-$color__link-visited: #00cc00;
-$color__link-hover: darken(#00cc00, 10%);
+$color__green:  #00cc00;
+
+$color__link: $color__green;
+$color__link-visited: $color__green;
+$color__link-hover: darken($color__green, 10%);
 
 // Typography
 
