--- a/themes/quotesondev-theme/sass/_page-templates.scss
+++ b/themes/quotesondev-theme/sass/_page-templates.scss
@@ -9,6 +9,7 @@
         font-weight: 900;
         font-family: "Font Awesome 5 Free";
         font-size: 100px;
+        color: $color__green;
     } 
     .site-main::after {
         display: inline-block;
@@ -16,6 +17,7 @@
         font-weight: 900;
         font-family: "Font Awesome 5 Free";
         font-size: 100px;
+        color: $color__green;
     }   
 }
 
