--- a/themes/quotesondev-theme/sass/_variables.scss
+++ b/themes/quotesondev-theme/sass/_variables.scss
@@ -30,6 +30,6 @@ $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 
 // Screen Widths
-
+$fixed__width: 1080px;
 $tablet__width: 620px;
 $desktop__width: 1080px;
