--- a/themes/quotesondev-theme/style.css
+++ b/themes/quotesondev-theme/style.css
@@ -573,7 +573,9 @@ a {
 # Content
 --------------------------------------------------------------*/
 body {
-  font-weight: lighter; }
+  font-weight: lighter;
+  max-width: 1080px;
+  margin: auto; }
 
 a {
   text-decoration: none; }
@@ -581,6 +583,38 @@ a {
 .site {
   padding: 2.5%; }
 
+button {
+  background-color: transparent; }
+
+/* Desktop Version */
+@media (min-width: 1080px) {
+  .site-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .site-main article {
+      width: 50%; }
+  .site-main::before {
+    content: "\f10d";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    font-size: 100px;
+    color: #00cc00; }
+  .site-main::after {
+    content: "\f10e";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    font-size: 100px;
+    color: #00cc00; } }
+
+/* Tablet Version */
 /* Posts and pages */
 .sticky {
   display: block; }
@@ -625,22 +659,6 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* About */
-@media (min-width: 1080px) {
-  .site-main::before {
-    display: inline-block;
-    content: "\f10d";
-    font-weight: 900;
-    font-family: "Font Awesome 5 Free";
-    font-size: 100px;
-    color: #00cc00; }
-  .site-main::after {
-    display: inline-block;
-    content: "\f10e";
-    font-weight: 900;
-    font-family: "Font Awesome 5 Free";
-    font-size: 100px;
-    color: #00cc00; } }
-
 /* Footer */
 .site-footer .menu {
   display: -webkit-box;
