--- a/themes/quotesondev-theme/sass/_content.scss
+++ b/themes/quotesondev-theme/sass/_content.scss
@@ -17,8 +17,19 @@ a {
     padding: 2.5%;
 }
 
-button {
-	background-color: transparent;
+button, button:focus, button:active, button:hover {
+	background: transparent;
+	border: 2px solid $color__green;
+	box-shadow: none;
+	margin: 0 auto;
+	color: $color__green;
+	font-size: 1rem;
+	text-shadow: none;
+	outline: none;
+}
+button:hover {
+	border-color: darken($color__green, 10%);
+	color: darken($color__green, 10%);
 }
 
 
