--- a/themes/quotesondev-theme/style.css
+++ b/themes/quotesondev-theme/style.css
@@ -583,8 +583,20 @@ a {
 .site {
   padding: 2.5%; }
 
-button {
-  background-color: transparent; }
+button, button:focus, button:active, button:hover {
+  background: transparent;
+  border: 2px solid #00cc00;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin: 0 auto;
+  color: #00cc00;
+  font-size: 1rem;
+  text-shadow: none;
+  outline: none; }
+
+button:hover {
+  border-color: #009900;
+  color: #009900; }
 
 /* Desktop Version */
 @media (min-width: 1080px) {
