--- a/themes/quotesondev-theme/sass/_page-templates.scss
+++ b/themes/quotesondev-theme/sass/_page-templates.scss
@@ -6,21 +6,37 @@
 
 /* Submit a Quote Page */
 .quote-submission {
-    width: 70%;
+    width: 75%;
     margin: auto;
     #quote-submission-form {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        height: 400px;
         div {
             display: flex;
             flex-direction: column;
         }
-        label {
-            width: 60%;
-        }
         input, textarea {
             border: 1px solid $color__green;
             background: transparent;
+            color: white;
+            width: 60%;
+        }
+        textarea {
+            border: 1px solid $color__green;
+            background: transparent;
+            color: white;
+            width: 100%;
+        }
+        #submit-quote {
+            margin: 0;
+            box-shadow: none;
+            font-size: 1rem;
+            text-shadow: none;
+            outline: none;
+            width: 30%;
+            color: $color__green;
         }
     }
 }
@@ -29,22 +45,22 @@
 
 
 /* Footer */
-.site-footer .menu {
-    display: flex;
-    margin-bottom: 4%;
-    li {
-        border-right: 1px solid #ffffff;
-        line-height: 1;
-        padding: 0 1rem;
+.site-footer{
+    .menu {
+        display: flex;
+        li {
+            border-right: 1px solid #ffffff;
+            line-height: 1;
+            padding: 0 1rem;
+        }
+        li:first-child {
+            padding-left: 0;
+        }
+        li:last-child {
+            border: none;
+        }
     }
-    li:first-child {
-        padding-left: 0;
-    }
-    li:last-child {
-        border: none;
-    }
-}
-
+} 
 
 
 
