--- a/themes/quotesondev-theme/style.css
+++ b/themes/quotesondev-theme/style.css
@@ -589,8 +589,10 @@ button, button:focus, button:active, button:hover {
   -webkit-box-shadow: none;
           box-shadow: none;
   margin: 0 auto;
+  padding: .75rem 2.5rem;
   color: #00cc00;
   font-size: 1rem;
+  font-weight: bolder;
   text-shadow: none;
   outline: none; }
 
@@ -598,128 +600,6 @@ button:hover {
   border-color: #009900;
   color: #009900; }
 
-/* Desktop Version */
-@media (min-width: 1080px) {
-  .home .site-main, .page-template-default .site-main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    .home .site-main .container, .page-template-default .site-main .container {
-      -webkit-box-sizing: border-box;
-              box-sizing: border-box;
-      width: 70%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      margin: auto; }
-      .home .site-main .container p, .page-template-default .site-main .container p {
-        font-size: 2.5rem; }
-      .home .site-main .container .entry-meta, .page-template-default .site-main .container .entry-meta {
-        width: 100%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        line-height: 1; }
-        .home .site-main .container .entry-meta .entry-title, .page-template-default .site-main .container .entry-meta .entry-title {
-          margin: 0; }
-        .home .site-main .container .entry-meta .source, .page-template-default .site-main .container .entry-meta .source {
-          font-size: 1.5rem; }
-  .home .site-main::before, .page-template-default .site-main::before {
-    content: "\f10d";
-    font-weight: 900;
-    font-family: "Font Awesome 5 Free";
-    font-size: 100px;
-    color: #00cc00; }
-  .home .site-main::after, .page-template-default .site-main::after {
-    content: "\f10e";
-    font-weight: 900;
-    font-family: "Font Awesome 5 Free";
-    font-size: 100px;
-    color: #00cc00; }
-  .home .site-footer, .page-template-default .site-footer {
-    max-width: 1080px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    margin-top: 5%;
-    margin-bottom: 0; }
-    .home .site-footer .main-navigation, .page-template-default .site-footer .main-navigation {
-      width: auto; }
-      .home .site-footer .main-navigation .menu, .page-template-default .site-footer .main-navigation .menu {
-        margin-right: 1rem; }
-        .home .site-footer .main-navigation .menu li:last-child, .page-template-default .site-footer .main-navigation .menu li:last-child {
-          border-right: 1px solid #ffffff; }
-    .home .site-footer .site-info p, .page-template-default .site-footer .site-info p {
-      line-height: 1;
-      margin: 0; }
-  .page-template-default .archive-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 70%;
-    margin: auto; }
-    .page-template-default .archive-container div ul {
-      list-style: none;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-      -ms-flex-line-pack: start;
-          align-content: flex-start;
-      margin: 0;
-      padding: 0; }
-      .page-template-default .archive-container div ul li {
-        margin-right: 2%;
-        font-size: 1.4rem; }
-  .page-template-default article {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    width: 70%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin: auto; } }
-
-/* Tablet Version */
 /* Posts and pages */
 .sticky {
   display: block; }
@@ -763,10 +643,59 @@ object {
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
+/* Index */
+.blog .container p {
+  font-size: 1.25rem; }
+
+.blog .container h2 {
+  font-size: 1.25rem;
+  font-weight: lighter; }
+
 /* About */
+.entry-header .entry-title {
+  font-size: 2rem;
+  font-weight: 400; }
+
+/* All Archives Page */
+.archive-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%; }
+  .archive-container .entry-title {
+    font-size: 2rem;
+    font-weight: 400; }
+  .archive-container h2 {
+    font-size: 1.5rem;
+    font-weight: 400; }
+  .archive-container div ul {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    margin: 0;
+    padding: 0; }
+    .archive-container div ul li {
+      margin-right: 1.125rem;
+      margin-bottom: .5rem;
+      font-size: 1rem;
+      line-height: 1.5rem; }
+
 /* Submit a Quote Page */
 .quote-submission {
-  width: 75%;
+  width: 100%;
   margin: auto; }
   .quote-submission #quote-submission-form {
     display: -webkit-box;
@@ -805,7 +734,7 @@ object {
       font-size: 1rem;
       text-shadow: none;
       outline: none;
-      width: 30%;
+      width: 50%;
       color: #00cc00; }
 
 /* Header */
@@ -815,22 +744,145 @@ object {
   .site-header .site-branding {
     width: 100%; }
     .site-header .site-branding img {
-      width: 70%;
-      margin: 0 12.5%; }
+      width: 100%;
+      margin: auto; }
 
 /* Footer */
-.site-footer .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-  .site-footer .menu li {
-    border-right: 1px solid #ffffff;
-    line-height: 1;
-    padding: 0 1rem; }
-  .site-footer .menu li:first-child {
-    padding-left: 0; }
-  .site-footer .menu li:last-child {
-    border: none; }
+.site-footer {
+  margin: 12% auto; }
+  .site-footer .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 6% auto; }
+    .site-footer .menu li {
+      border-right: 1px solid #ffffff;
+      line-height: 1;
+      padding: 0 1rem; }
+    .site-footer .menu li:first-child {
+      padding-left: 0; }
+    .site-footer .menu li:last-child {
+      border: none; }
 
-/* All Archives Page */
-/* Submit a Quote Page */
+/* Media Queries */
+/* Desktop Version */
+@media (min-width: 1080px) {
+  .home .site-main, .page-template-default .site-main, .single .site-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .home .site-main .container, .page-template-default .site-main .container, .single .site-main .container {
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      width: 70%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      margin: auto; }
+      .home .site-main .container p, .page-template-default .site-main .container p, .single .site-main .container p {
+        font-size: 2.5rem; }
+  .home .site-main::before, .page-template-default .site-main::before, .single .site-main::before {
+    content: "\f10d";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    font-size: 100px;
+    color: #00cc00; }
+  .home .site-main::after, .page-template-default .site-main::after, .single .site-main::after {
+    content: "\f10e";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    font-size: 100px;
+    color: #00cc00; }
+  .home .site-footer, .page-template-default .site-footer, .single .site-footer {
+    max-width: 1080px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-top: 5%;
+    margin-bottom: 0; }
+    .home .site-footer .main-navigation, .page-template-default .site-footer .main-navigation, .single .site-footer .main-navigation {
+      width: auto; }
+      .home .site-footer .main-navigation .menu, .page-template-default .site-footer .main-navigation .menu, .single .site-footer .main-navigation .menu {
+        margin-right: 1rem; }
+        .home .site-footer .main-navigation .menu li:last-child, .page-template-default .site-footer .main-navigation .menu li:last-child, .single .site-footer .main-navigation .menu li:last-child {
+          border-right: 1px solid #ffffff; }
+    .home .site-footer .site-info p, .page-template-default .site-footer .site-info p, .single .site-footer .site-info p {
+      line-height: 1;
+      margin: 0; }
+  .page-template-default .archive-container {
+    width: 70%;
+    margin: auto; }
+    .page-template-default .archive-container div ul li {
+      margin-right: 2%;
+      font-size: 1.4rem; }
+    .page-template-default .archive-container .post-tags ul li a {
+      font-size: 1.4rem !important; }
+  .page-template-default .quote-submission {
+    width: 75%; }
+    .page-template-default .quote-submission #submit-quote {
+      width: 30%; }
+  .page-template-default article {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: auto; } }
+
+/* Tablet Version */
+@media (min-width: 620px) {
+  .site-header .site-branding {
+    width: 75%;
+    margin: auto; }
+  .site-main .container {
+    width: 100%; }
+    .site-main .container p {
+      font-size: 1.75rem; }
+    .site-main .container .entry-meta {
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      line-height: 1; }
+      .site-main .container .entry-meta .entry-title {
+        margin: 0;
+        font-weight: lighter; }
+      .site-main .container .entry-meta .source {
+        font-size: 1.5rem; }
+  .archive-container div ul li {
+    font-size: 1.25rem; }
+  .archive-container .post-tags ul li a {
+    font-size: 1.25rem !important; }
+  .quote-submission #quote-submission-form #submit-quote {
+    width: 30%; } }
