--- a/themes/quotesondev-theme/style.css
+++ b/themes/quotesondev-theme/style.css
@@ -764,17 +764,40 @@ object {
     .site-footer .menu li:last-child {
       border: none; }
 
+/* Error 404 */
+.error-404 {
+  width: 100%;
+  margin: auto; }
+  .error-404 h1 {
+    font-weight: lighter; }
+  .error-404 .search-field {
+    background: transparent;
+    border: 2px solid #00cc00;
+    width: 240px;
+    font-size: 1.25rem;
+    padding-left: .75rem; }
+  .error-404 .search-submit {
+    border: 0;
+    margin-left: .75rem;
+    padding: 0; }
+  .error-404 .search-submit::before {
+    content: "\f002";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    font-size: 1.25rem;
+    color: #00cc00; }
+
 /* Media Queries */
 /* Desktop Version */
 @media (min-width: 1080px) {
-  .home .site-main, .page-template-default .site-main, .single .site-main {
+  .home .site-main, .page-template-default .site-main, .single .site-main, .error404 .site-main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
-    .home .site-main .container, .page-template-default .site-main .container, .single .site-main .container {
+    .home .site-main .container, .page-template-default .site-main .container, .single .site-main .container, .error404 .site-main .container {
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
       width: 70%;
@@ -786,21 +809,24 @@ object {
           -ms-flex-direction: column;
               flex-direction: column;
       margin: auto; }
-      .home .site-main .container p, .page-template-default .site-main .container p, .single .site-main .container p {
+      .home .site-main .container p, .page-template-default .site-main .container p, .single .site-main .container p, .error404 .site-main .container p {
         font-size: 2.5rem; }
-  .home .site-main::before, .page-template-default .site-main::before, .single .site-main::before {
+    .home .site-main .error-404, .page-template-default .site-main .error-404, .single .site-main .error-404, .error404 .site-main .error-404 {
+      width: 70%;
+      margin: auto; }
+  .home .site-main::before, .page-template-default .site-main::before, .single .site-main::before, .error404 .site-main::before {
     content: "\f10d";
     font-weight: 900;
     font-family: "Font Awesome 5 Free";
     font-size: 100px;
     color: #00cc00; }
-  .home .site-main::after, .page-template-default .site-main::after, .single .site-main::after {
+  .home .site-main::after, .page-template-default .site-main::after, .single .site-main::after, .error404 .site-main::after {
     content: "\f10e";
     font-weight: 900;
     font-family: "Font Awesome 5 Free";
     font-size: 100px;
     color: #00cc00; }
-  .home .site-footer, .page-template-default .site-footer, .single .site-footer {
+  .home .site-footer, .page-template-default .site-footer, .single .site-footer, .error404 .site-footer {
     max-width: 1080px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -817,13 +843,13 @@ object {
             justify-content: flex-end;
     margin-top: 5%;
     margin-bottom: 0; }
-    .home .site-footer .main-navigation, .page-template-default .site-footer .main-navigation, .single .site-footer .main-navigation {
+    .home .site-footer .main-navigation, .page-template-default .site-footer .main-navigation, .single .site-footer .main-navigation, .error404 .site-footer .main-navigation {
       width: auto; }
-      .home .site-footer .main-navigation .menu, .page-template-default .site-footer .main-navigation .menu, .single .site-footer .main-navigation .menu {
+      .home .site-footer .main-navigation .menu, .page-template-default .site-footer .main-navigation .menu, .single .site-footer .main-navigation .menu, .error404 .site-footer .main-navigation .menu {
         margin-right: 1rem; }
-        .home .site-footer .main-navigation .menu li:last-child, .page-template-default .site-footer .main-navigation .menu li:last-child, .single .site-footer .main-navigation .menu li:last-child {
+        .home .site-footer .main-navigation .menu li:last-child, .page-template-default .site-footer .main-navigation .menu li:last-child, .single .site-footer .main-navigation .menu li:last-child, .error404 .site-footer .main-navigation .menu li:last-child {
           border-right: 1px solid #ffffff; }
-    .home .site-footer .site-info p, .page-template-default .site-footer .site-info p, .single .site-footer .site-info p {
+    .home .site-footer .site-info p, .page-template-default .site-footer .site-info p, .single .site-footer .site-info p, .error404 .site-footer .site-info p {
       line-height: 1;
       margin: 0; }
   .page-template-default .archive-container {
@@ -861,23 +887,11 @@ object {
     .site-main .container p {
       font-size: 1.75rem; }
     .site-main .container .entry-meta {
-      width: 100%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      line-height: 1; }
+      line-height: 1.5; }
       .site-main .container .entry-meta .entry-title {
         margin: 0;
-        font-weight: lighter; }
+        font-weight: lighter;
+        display: inline; }
       .site-main .container .entry-meta .source {
         font-size: 1.5rem; }
   .archive-container div ul li {
